--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
         </title>
     </head>
 
-    <body>
+    <body ontouchstart>
         <div class="container" id="root"></div>
     </body>
 </html>
