--- a/site/index.html
+++ b/site/index.html
@@ -6,8 +6,8 @@
         <meta content="yes" name="apple-mobile-web-app-capable" />
         <meta content="yes" name="apple-touch-fullscreen" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,viewport-fit=cover" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
         <meta name="renderer" content="webkit|ie-comp|ie-stand" />
         <link rel="shortcut icon" href="./favicon.ico" />
         <title>
